--- a/.github/workflows/hugo.yml
+++ b/.github/workflows/hugo.yml
@@ -30,5 +30,5 @@ jobs:
           #   keep_files: true
           user_name: yulongbb
           user_email: sunyulongbb@gmail.com
-          publish_branch: master
+          publish_branch: gh-pages
         #   cname: example.com
