--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,6 @@
 baseURL = "https://yulongbb.github.io/"
 languageCode = "zh-CN"
-title = "玉龙BB"
+title = "大数据创新中心"
 theme = "ananke"
 
 DefaultContentLanguage = "zh"
