--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = "https://yulongbb.github.io/"
+baseURL = "https://yulongbb.cn/"
 languageCode = "zh-CN"
 title = "大数据创新中心"
 theme = "ananke"
